Fix content grid layout
Now all 5 items line up properly in the grid and are hidden behind the
splash page before the user enters

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,43 +18,35 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(205, 164, 76);
     margin: 0;
-    width: 100vw;
-    height: 100vh;
+    padding: 30px;
 }
 
 .grid{
+    position:relative;
+    height: calc(100vh - 60px); /* This seems hacky.. ask Adon about this*/
+    grid-gap: 30px; /* Why does my grid have a gap on the bottom?? */
     display: grid;
-    grid: repeat(5, 5fr) / repeat(6, 6fr); /* row/column */
-    gap: 3%;
-
-    
-    /* width: 100vw;
-    height: 100vh; */
+    grid: repeat(4, 1fr) / repeat(6, 1fr); /* row/column */
 }
 
 .grid > div{
     background-color: var(--dark-olive-green);
-    
 }
 
-#box1{    
-    grid-area: span 3 / span 3;
+.box{    
+    grid-row: span 2;
+    grid-column: span 3;
 }
 
-#box2{
-    grid-area: span 3 / span 3;
+.box.bottom{
+    grid-column: span 2;
 }
 
-#box3{
-    grid-area: span 2 / span 2;
-}
-
-#box4{
-    grid-area: span 2 / span 2;
-}
-
-#box5{
-    grid-area: span 2 / span 2;
+.copy{
+    position: relative;
+    top: 0;
+    left: 0;
+    visibility: hidden;
 }
 
 .splash{
@@ -63,6 +55,7 @@ body{
     position: absolute;
     top: 0;
     left: 0;
+    background-color: var(--peru);
 }
 
 .error, .splash-content{
@@ -76,6 +69,7 @@ body{
     animation-timing-function: ease;
 }
 
+/* This might need pointer-events: none; */
 .error{
     visibility: hidden;
 }
@@ -85,6 +79,7 @@ body{
     text-align: justify;
 }
 
+/* Button section ========== */
 .buttons{
     width: 100%;
     display: flex;
@@ -109,7 +104,6 @@ body{
 #plus:hover, #minus:hover{
     background-color: var(--peru);
 }
-
 .horizontal, .vertical{
     position: relative;
     height: 5px;
@@ -126,8 +120,7 @@ body{
 .vertical{
     transform: rotateZ(90deg) translate(-50%, 160%);
 }
-
-
+/* ========================= */
 
 .splash.hide{
     display: none;
